@startuml
Skinparam groupInheritance 2
skinparam backgroundColor #CFEFFA
namespace Commands #FFFEDB {
}
namespace Products #FFFEDB {
}
namespace Users #FFFEDB {
}

Class App {}
class CLI {}
class Products.Product  {
#id: int
#name:str
#price: double
}

class ProductHandler {
-products:arrayList<Product>
}

class Ticket{
-products:arrayList<Product>
}

enum State{
EMPTY
ACTIVE
CLOSED
}

Ticket ..>State

class TicketHandler {
-ticket : ArrayList<Ticket>
}

Product --o Ticket
TicketHandler o-- Ticket



class Products.ProductBasic{

-id: int
-name:str
-category:Category
-price:double
}

enum Products.Category {
MERCH
ELECTRONICA
PAPELERIA
ROPA
LIBRO
}
ProductBasic -->Category
Product <|-- ProductBasic

class Products.ProductPers{

-id:int
-name:str
-category:Category
-price:double
-texts:ArrayList<Str>
}
ProductBasic <|--  ProductPers

class Products.CampusMeals{
-maxParticipantes:100
-MINTIME:72
}


class Products.Meetings{
-maxParticipantes:100
-MINTIME:12
}

Product <|-- CampusMeals
Product <|-- Meetings

class UserHandler{
-Users:ArrayList<User>
}

abstract class Users.User<<abstract>> {
}
UserHandler o-- User

class Users.Client {
-id
-name
-dni
-mail
-cajero:Cajero
}

User <|-- Client

class Users.Cashier{
-code:str
-name
-mail
}
User <|-- Cashier

Cashier o-- Ticket
Client o-- Ticket


abstract class Commands.Command <<abstract>>{
#name:Str
+{abstract}apply(args:String[])
}

class Commands.CommandProd{
+ apply(args : String[])
}

class Commands.CommandProdEx{
 + apply(args : String[])
}

CommandProd *-- CommandProdEx

App *-- CommandProd


class Commands.CommandTicket{
+ apply(args : String[])
}

class Commands.CommandTicketEx{
 + apply(args : String[])
}


CommandTicket *-- CommandTicketEx
App *-[norank]- CommandTicket

class Commands.CommandUser{
+ apply(args : String[])
}

class Commands.CommandUserEx{
 + apply(args : String[])
}



CommandUser *-- CommandUserEx
App *-[norank]- CommandUser

App *-- CLI

App *-- Command
Command <|-- CommandProdEx
Command <|-- CommandTicketEx
Command <|-- CommandUserEx

App --> ProductHandler

ProductHandler --o Product


App --> TicketHandler
App --> UserHandler

CommandUserEx .[norank].> UserHandler
CommandProdEx .[norank].> ProductHandler
CommandTicketEx .[norank].> TicketHandler

@enduml